[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI Scripts/YouWon.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 52
use_filter = true
font_data = ExtResource( 1 )

[node name="YouWon" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="LevelSelect" type="Button" parent="."]
margin_left = 441.0
margin_top = 144.0
margin_right = 585.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 2 )
text = "Level Select"
__meta__ = {
"_edit_lock_": true
}

[node name="Quit" type="Button" parent="."]
margin_left = 450.0
margin_top = 208.0
margin_right = 574.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 3 )
text = "Return To Menu"
__meta__ = {
"_edit_lock_": true
}

[node name="UI Title" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 112.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_fonts/font = SubResource( 1 )
text = "Level Completed!"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
